--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
 
 </body>
 
+    <script src="core/weather.js"></script>
     <script src="core/main.js"></script>
     
     <!-- jquery from online source -->
