--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
     <script src="./core/idw.js"></script>
     <!-- <script src="core/weather.js"></script> -->
     <script src="core/ui.js"></script>
+    <script src="./core/loadFile.js"></script>
     <!-- <script src="core/storage.js"></script> -->
     <!-- <script src="core/main.js"></script> -->
     <!-- <script src="./core/main-from-geosrv.js"></script> -->
