--- a/index.html
+++ b/index.html
@@ -44,8 +44,15 @@
 
     <div id="containerGeoid">
         <div>
-            <h4 id="header-for-geoid" style="color: white; text-align:center;">Υπολογισμός Γεωειδούς</h4>
-            <h4 id="header-for-gravity" style="color: white; text-align:center;">Υπολογισμός Ανωμαλίων Βαρύτητας</h4><hr>
+            <label style="color: white;">Επιλογή Δεδομένων:</label>
+            <input type="radio" id="huey" name = "drone" value="huey" checked><label for="huey" style="color: white;">Γεωειδές</label>
+            <input type="radio" id="dewey" name = "drone" value="dewey"> <label for="dewey" style="color: white;">Βαρύτητα</label>
+        </div>
+        <hr>
+
+        <div>
+            <h3 id="header-for-geoid" style="color: white; text-align:center;">Υπολογισμός Γεωειδούς</h3>
+            <h3 id="header-for-gravity" style="color: white; text-align:center;">Υπολογισμός Ανωμαλίων Βαρύτητας</h3><hr>
         </div>
         
       <div id="cbox">
@@ -54,10 +61,10 @@
           <label for="checkbox" style="color: white; text-align:center;">Ανάκτηση πληροφορίας από υπόβαθρο</label><br>
 
           <input type="checkbox" id="checkbox2">
-          <label for="checkbox3" style="color: white; text-align:center;">Ανάκτηση πληροφορίας με συντεταγμένες</label><br>
+          <label for="checkbox2" style="color: white; text-align:center;">Ανάκτηση πληροφορίας με συντεταγμένες</label><br>
 
           <input type="checkbox" id="checkbox3">
-          <label for="checkbox2" style="color: white; text-align:center;">Εισαγωγή αρχείου</label><br>
+          <label for="checkbox3" style="color: white; text-align:center;">Εισαγωγή αρχείου</label><br>
           <input type="file" id="fileInput" style="color: transparent; font-size: 14px; display: none;" accept=".txt,.csv">
 
       </div>
@@ -122,7 +129,7 @@
 </body>
 
     <script src="./core/readRaster.js"></script>
-    <script src="./core/selectValue.js"></script>
+    <script src="./core/selectData.js"></script>
     <script src="./core/idw.js"></script>
    
     <script src="core/ui.js"></script>
@@ -137,17 +144,6 @@
     <script src="controls/faa/faa-control.js"></script>
     <script src="controls/satBaseMap/sat.js"></script>
     <script src="./controls/cross/cross.js"></script>
-    <script src="controls/test/test.js"></script>
-     -->
-    <!-- jquery from online source -->
-    <!-- <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css">
-    <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
-    <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script> -->
-
-        <!-- for materialize -->
-    <!-- <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script> -->
-
-    <!-- Compiled and minified JavaScript -->
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script> -->
+    <script src="controls/test/test.js"></script> -->
 
 </html>
