--- a/index.html
+++ b/index.html
@@ -117,10 +117,16 @@
           </p> 
          
       </div>  
-      <div style="font-size: 17px">
-          <a href="https://drive.google.com/open?id=1EKOkBaIfLY9ls3E-BOa6lBIVlIIWk_Ps" target="_blank" style="color:white;">2. Τεχνική τεκμηρίωση (Περίληψη)</a>
-          <br><a href="https://drive.google.com/open?id=1HPlvLof3-yra4F1BoiOu7mR9dD3Jf2Vf" target="_blank" style="color:white;">3. Χάρτης Γεωειδούς</a> 
+      <div id="geo-documentation" style="font-size: 17px; display:block">
+          <a href="https://drive.google.com/file/d/1ltB_NZ0PIDZ63T4oHow_4fKL50EDjItb/view" target="_blank" style="color:white;">2. Τεχνική τεκμηρίωση (Περίληψη)</a>
+          <br><a href="https://drive.google.com/file/d/1ltB_NZ0PIDZ63T4oHow_4fKL50EDjItb/view" target="_blank" style="color:white;">3. Χάρτης Γεωειδούς</a> 
       </div>
+
+      <div id="gravity-documentation" style="font-size: 17px; display: none">
+        <a href="" target="_blank" style="color:white;">2. Τεχνική τεκμηρίωση </a>
+        <br><a href="" target="_blank" style="color:white;">3. Χάρτης Γεωειδούς</a> 
+      </div>
+    </div>
 
   </div>
 
